--- a/css/style.css
+++ b/css/style.css
@@ -66,11 +66,11 @@ nav .side-minu {
         display: inline-block;
     }
 
-    /* .side-minu.exite {
-        display: none;
-        background-color: black;
-    } */
+    nav .minu-icon ~ .slid-out {
+        animation: slideOutFromRight 1s ease-in;
+    }
 
+    /* the .visible class insert to side-minu div */
     nav .minu-icon.clicked ~ .visible {
         display: flex;
         flex-direction: column;
@@ -83,6 +83,7 @@ nav .side-minu {
         height: 100vh;
         background-color: white;
         z-index: 10;
+        animation: slideInFromRight 0.5s ease-in;
     }
 
     .side-minu ul.flex {
@@ -95,7 +96,31 @@ nav .side-minu {
         position: absolute;
         top: 0;
         right: 0;
-        padding: 1em 2.5em;
+        padding: 1rem 2.5rem;
+    }
+
+    @media (max-width: 450px) {
+        .side-minu .xmark {
+            padding: 1rem 1.1rem;
+        }
+    }
+
+    @keyframes slideInFromRight {
+        0% {
+            transform: translateX(100%);
+        }
+        100% {
+            transform: translateX(0);
+        }        
+    }
+
+    @keyframes slideOutFromRight {
+        from {
+            transform: translateX(0);
+        }
+        to {
+            transform: translateX(100%);
+        }        
     }
 }
 
