--- a/css/utilities.css
+++ b/css/utilities.css
@@ -67,6 +67,21 @@ span {
     display: inline-block;
 }
 
+.des-p {
+    text-align: center;
+    font-weight: 700;
+    font-size: 2.5em;
+    text-transform: capitalize;
+}
+
+.sec-h {
+    color: var(--bg-icon-purple);
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 1.1rem;
+    margin-bottom: 1em;
+}
+
 .btn-p {
     padding: 0.7em 2em;
 }
