--- a/css/utilities.css
+++ b/css/utilities.css
@@ -6,8 +6,10 @@
 ========================================================================= */
 :root {
     --bg-btns-purple: hsl(249, 63%, 54%);
+    --bg-hover-purple: hsl(249, 72.77%, 64.72%);
     --bg-icon-purple: hsl(249, 95%, 63%);
     --bg-btns-red: hsl(357, 64%, 53%);
+    --bg-hover-red: hsl(357, 83.51%, 64.66%);
     --bg-p-red: hsl(357, 94%, 63%);
     --bg-white: hsl(0, 0%, 100%);
     --bg-black: hsl(0, 0%, 0%);
